# sscan

./: Main.hs  NEWS.md  Presets.hs  README.md  Types.hs  UI.hs  sscan.cabal  stack.yaml
Brick/Widgets/: DefnList.hs
Types/: Preset.hs  State.hs
debian/: changelog  clean  control  install  rules
