name:                sscan
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Sean Whitton
maintainer:          spwhitton@spwhitton.name
copyright:           (C) 2017 Sean Whitton
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable sscan
  main-is:             Main.hs
  ghc-options:         -threaded
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , brick >=0.17 && <0.18
                     , microlens >= 0.4.7.0
                     , microlens-th >= 0.4.1.1
                     , text >= 1.2.2.1
                     , vty >= 5.15
  -- hs-source-dirs:      
  default-language:    Haskell2010
